--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
         <h1>Parking App Demo</h1>
         <!-- Header content goes here -->
     </div>
-    <div class = "map"> 
-
-    </div>
+    <h1>Parking map demo: </h1>
+    <br>
+    <div class = "map"></div>
+    
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </body>
