--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <h1>Parking App Demo</h1>
         <!-- Header content goes here -->
     </div>
-    <h1>Parking map demo: </h1>
+    <h1>Parking map demo 1028r32897429847uo23e4jhroi23rfhniq: </h1>
     <br>
     <div class = "map"></div>
     
