--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Parking App Demo</h1>
+        <h1>ParkSmart Demo</h1>
+        <img id="logo" src="UTSA.png">
         <!-- Header content goes here -->
     </div>
     <br>
     <div class = "map"></div>
-    
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </body>
